Correct responsive on mobile

--- a/frontend/src/components/home/home.scss
+++ b/frontend/src/components/home/home.scss
@@ -15,19 +15,26 @@
 
         span { font-weight: normal; }
 
+        @media(max-width: 1000px) {
+            margin-top: 20vh;
+            margin-bottom: 30px;
+            padding-left: 15px;
+            font-size: 3em;
+        }
+
         @media(max-width: $min-width-mobile) {
             text-align: left;
             margin-top: 10vh;
             margin-bottom: 30px;
             padding-left: 15px;
-            font-size: 3em;
+            font-size: 2.7em;
         }
 
         @media(max-width: $min-width-small-mobile) {
             margin-top: 10vh;
             margin-bottom: 50px;
             padding-left: 10px;
-            font-size: 2.5em;
+            font-size: 2.3em;
             letter-spacing: 0;
         }
     }
