--- a/frontend/src/style/global.scss
+++ b/frontend/src/style/global.scss
@@ -35,6 +35,8 @@ ul.list-no-margin-padding { margin: 0; padding: 0; }
 .no-padding { padding: 0 !important; }
 .no-margin { margin: 0 !important; }
 .block { display: block; }
+.no-break-word { white-space: nowrap; }
+.bold { font-weight: bold !important; }
 
 /* Shared style */
 p { margin: 0; }
